--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,54 @@
-agama==1.0
 appnope==0.1.4
-astropy==7.0.0
-astropy-iers-data==0.2024.12.9.0.36.21
+astropy==7.1.0
+astropy-iers-data==0.2025.8.25.0.36.58
 asttokens==3.0.0
-cmasher==1.9.2
-colorspacious==1.1.2
-comm==0.2.2
+comm==0.2.3
 contourpy==1.3.0
-corner==2.2.3
 cycler==0.12.1
-Cython==3.0.11
-debugpy==1.8.12
+debugpy==1.8.16
 decorator==5.2.1
 executing==2.2.0
 fonttools==4.54.1
-galpy==1.10.2
 # gc_simulation_utilities @ file:///Users/z5114326/Documents/GitHub/gc_simulation_utilities
 gizmo_analysis==1.0.2
 h5py==3.12.1
 halo_analysis==1.0.2
-ipykernel==6.29.5
-ipython==8.32.0
+ipykernel==6.30.1
+ipython==9.5.0
+ipython_pygments_lexers==1.1.1
 jedi==0.19.2
-joblib==1.5.0
 jupyter_client==8.6.3
-jupyter_core==5.7.2
+jupyter_core==5.8.1
 kiwisolver==1.4.7
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
 numpy==1.26.0
 packaging==24.2
-pandas==2.2.3
-pandas_flavor==0.7.0
-parso==0.8.4
-patsy==1.0.1
+pandas==2.3.2
+parso==0.8.5
 pexpect==4.9.0
 pillow==11.0.0
-pingouin==0.5.5
-platformdirs==4.3.6
-prompt_toolkit==3.0.50
+platformdirs==4.4.0
+prompt_toolkit==3.0.52
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyerfa==2.0.1.5
-Pygments==2.19.1
+Pygments==2.19.2
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
-pytz==2024.2
+pytz==2025.2
 PyYAML==6.0.2
-pyzmq==26.2.1
-scikit-learn==1.6.1
+pyzmq==27.0.2
+regions==0.10
 scipy==1.14.1
-seaborn==0.13.2
 six==1.16.0
 stack-data==0.6.3
-statsmodels==0.14.4
-tabulate==0.9.0
-threadpoolctl==3.6.0
-tornado==6.4.2
+tornado==6.5.2
 tqdm==4.67.0
 traitlets==5.14.3
-tzdata==2024.2
+typing_extensions==4.15.0
+tzdata==2025.2
 utilities_awetzel==1.0.2
 wcwidth==0.2.13
-xarray==2025.4.0
